manifests/sco/networkpolicy.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: jenkins-agent
  namespace: sco
spec:
  serviceAccountSelector: role == 'jenkins-agent'
  types:
    - Ingress
    - Egress
  ingress:
    - metadata:
        annotations:
          from: jenkins-controller
          to: jenkins-agent
      action: Allow
      source:
        selector: app.kubernetes.io/component == 'jenkins-controller'
        namespaceSelector: projectcalico.org/name == 'jenkins'
  egress:
    - metadata:
        annotations:
          from: jenkins-agent
          to: jenkins-controller
      action: Allow
      destination:
        selector: app.kubernetes.io/component == 'jenkins-controller'
        namespaceSelector: projectcalico.org/name == 'jenkins'
    - metadata:
        annotations:
          from: jenkins-agent
          to: vpc
      action: Allow
      protocol: TCP
      destination:
        selector: vpc == 'local' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 9042
    - metadata:
        annotations:
          from: jenkins-agent
          to: mgmt
      action: Allow
      protocol: TCP
      destination:
        selector: vpc == 'mgmt' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 443
          - 80
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: sco-application
  namespace: sco
spec:
  types:
    - Egress
  egress:
    - metadata:
        annotations:
          from: sco-application
          to: vpc
      action: Allow
      source:
        serviceAccounts:
          names:
            - tsb-sco
            - default
      protocol: TCP
      destination:
        selector: vpc == 'local' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 9042
          - 9142
          - 9092
          - 7790
          - 2181
          - 7788
          - 9096
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: sco-nginx-ingress
  namespace: sco
spec:
  serviceAccountSelector: projectcalico.org/name == 'tsb-sco-fl-spring-api-gateway-ingress-nginx'
  types:
    - Ingress
  ingress:
    - metadata:
        annotations:
          from: vpc
          to: nginx
      action: Allow
      source:
        selector: vpc == 'local' && layer == 'all'
        namespaceSelector: global()
